	* Implemented a FILE audio device in 'src/glassplayer/dst_file.cpp'
	and 'src/glassplayer/dst_file.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an ALSA audio device in 'src/glassplayer/dst_alsa.cpp'
	and 'src/glassplayer/dst_alsa.h'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Changed the default audio device type from STDOUT to ALSA in
	'src/glassplayer/glassplayer.cpp'.
2016-01-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented channel remixing in the ALSA driver in
	'src/glassplayer/dev_alsa.cpp'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--disable-stream-metadata' option.
	* Added an MPEG-1 codec in 'src/glassplayer/codec_mpeg1.cpp' and
	'src/glassplayer/codec_mpeg1.h'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up Shoutcast error handling in
	'src/glassplayer/conn_xcast.cpp'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/codec_mpeg1.cpp' that broke
	the build when configured without LibMad.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Increased the value of CODEC_RINGBUFFER_SIZE to '33554432' in
	'src/common/codec.h'.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the input interface to accept the server URL value
	as the last argument on the command line.
2016-01-14 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up logging statements to reduce output to STDERR when
	the '--verbose' switch was not specified.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/codec_mpeg1.cpp' that caused
	playout of single channel streams to be incorrect.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented sample-rate conversion in the ALSA audio device.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented PLL samplerate adaptation in the ALSA audio device.
2016-01-15 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'make rpm' target.